--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
                         </div>
                         <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Weather</h2>
                         <p class="leading-relaxed text-base">For your tomorrows trip.</p>
+                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/weather.html">Learn More
+                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                                <path d="M5 12h14M12 5l7 7-7 7"></path>
+                            </svg>
+                        </a>
                     </div>
                 </div>
                 <div class="xl:w-1/3 md:w-1/2 p-4">
