--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                         <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Calculator</h2>
                         <p class="leading-relaxed text-base">Calculator (only calc)</p>
-                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/calculator.html">Learn More
+                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/calculator.html">Go
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                 stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -51,7 +51,7 @@
                         </div>
                         <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Clock</h2>
                         <p class="leading-relaxed text-base">Clock (only clk)</p>
-                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/clock.html">Learn More
+                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/clock.html">Go
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                 stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -71,7 +71,7 @@
                         </div>
                         <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Cryptocurrency tracker</h2>
                         <p class="leading-relaxed text-base">Because it is in trend.</p>
-                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/crypto.html">Learn More
+                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/crypto.html">Go
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                 stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -91,7 +91,7 @@
                         <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Dice online</h2>
                         <p class="leading-relaxed text-base">Dice simulator while help you to throw dice online with the
                             number of faces of dice can be changed .You can toss a coin .</p>
-                            <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/dice.html">Learn More
+                            <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/dice.html">Go
                                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                     stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -110,7 +110,7 @@
                         </div>
                         <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Note making app</h2>
                         <p class="leading-relaxed text-base">Will help you to make notes online.</p>
-                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/note.html">Learn More
+                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/note.html">Go
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                 stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -164,7 +164,7 @@
                         <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Tic-Tac-Toe</h2>
                         <p class="leading-relaxed text-base">Tic tac toe to play with you frnd or challenge him/her .
                         </p>
-                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/tictactoe/index.html">Learn More
+                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/tictactoe/index.html">Go
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                 stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -184,7 +184,7 @@
                         </div>
                         <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Weather</h2>
                         <p class="leading-relaxed text-base">For your tomorrows trip.</p>
-                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/weather.html">Learn More
+                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/weather.html">Go
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                 stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -204,7 +204,27 @@
                         </div>
                         <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Portfolio</h2>
                         <p class="leading-relaxed text-base"></p>
-                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/portfolio.html">Learn More
+                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/portfolio.html">Go
+                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                                <path d="M5 12h14M12 5l7 7-7 7"></path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="xl:w-1/3 md:w-1/2 p-4">
+                    <div class="border border-gray-200 p-6 rounded-lg">
+                        <div
+                            class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4">
+                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
+                                <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
+                                <circle cx="12" cy="7" r="4"></circle>
+                            </svg>
+                        </div>
+                        <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Todo list</h2>
+                        <p class="leading-relaxed text-base">IDK why but (it s vry simple to code)</p>
+                        <a class="text-indigo-500 inline-flex items-center mt-3" href="/tool/todo.html">Go
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                 stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                 <path d="M5 12h14M12 5l7 7-7 7"></path>
