done special tool

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tool4U</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -233,9 +234,9 @@
                     </div>
                 </div>
             </div>
-            <button
-                class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg" href="rickroll.com">Tool
-                only for you😁</button>
+            <a
+                class="yoon flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Tool
+                only for you😁</a>
 
         </div>
     </section>
